--- a/css/style.css
+++ b/css/style.css
@@ -450,9 +450,9 @@ h3 {
 }
 .global-footer .global-footer-contact {
    display: flex;
-   width: 25%;
    flex-direction: column;
    justify-content: flex-start;
+   padding-right: 93px;
 }
 .logo-footer-container {
     display: flex;
@@ -497,7 +497,7 @@ address {
 }
 .social-footer-container {
     display: block;
-    width: 50%;
+    padding-right: 93px;
 }
 .social-footer-container .social-title {
     color: var(--background-white-color);
@@ -512,8 +512,7 @@ address {
 }  
 .social-footer {
     display: inline-block;
-    padding-right: 10px;
-    
+    padding-right: 10px; 
 }
 .social-footer-image {
    display: flex; 
@@ -539,6 +538,76 @@ address {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+.signup-container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    gap: 12px;
+    padding-top: 20px;
+}
+.subscribe-title {
+    font-family: inherit;
+    color: var(--background-white-color);
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-align: left; 
+}
+.input-email {
+    width: 358px;
+    height: 50px;
+    border-radius: 4px;
+    border: 1px solid #FFFFFF4D;
+    background-color: var(--background-grey-color);
+    box-shadow: 0px 4px 4px 0px #00000026;
+    padding-left: 16px;
+}
+.input-email:focus {
+    border: var(--blue-color);
+    color: var(--background-white-color);
+    background-color: var(--background-grey-color);
+}
+.input-email::placeholder {
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    padding: 15px 0;
+    color: #FFFFFF99;
+}
+.subscribe-button {
+    width: 200px;
+    height: 50px;
+    border-radius: 4px;
+    background-color: var(--blue-color);
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    color: var(--background-white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: var(--blue-color);
+    gap: 25px;
+    cursor: pointer;
+    box-shadow: 0px 4px 4px 0px #00000026;
+    transition: background-color (--transition);
+}
+.subscribe-button:hover {
+    background-color: var(--blue-hover-color);
+}
+.subscribe-button .send-svg {
+    width: 24px; 
+    height: 24px;
+    fill: currentColor;
 }
 .portofolio-filter {
     display: flex;
@@ -776,8 +845,10 @@ textarea:focus {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     padding-top: 20px;
     padding-bottom: 30px;
+    gap: 8px;
 }
 .check {
     font-family: inherit;
@@ -794,13 +865,20 @@ textarea:focus {
     cursor: pointer;
     position: relative;
     width: 16px;
-    height: 15px;
-    color: var(--font-dark-grey-color);
+    height: 15px; 
 }
-.check__input:checked {
-    background-image: url(../images/icon-check.svg);
+.icon-checkbox {
     width: 16px;
     height: 15px;
+    position: absolute;
+    top: calc(50% - 16px);
+    left: 14px;
+}
+.check__input:not(:checked)+svg {
+    display: none;
+}
+.check__input:checked {
+    visibility: hidden;
 }
 .submit-button-container {
     display: flex;
